--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
-    "node-cron": "^3.0.3",
-    "nodemon": "^3.1.4"
+    "node-cron": "^3.0.3"
   }
 }
